Fix user dropdown z-index

--- a/src/components/widgets/UserDropdown.module.scss
+++ b/src/components/widgets/UserDropdown.module.scss
@@ -19,6 +19,7 @@
 }
 
 .dropdown-wrapper {
+  z-index: 9999;
   filter: drop-shadow(var(--card-shadow));
   transition: all 0.2s ease;
 
